--- a/css/theme.css
+++ b/css/theme.css
@@ -10956,7 +10956,7 @@ h4 span.book-title {
 .course-block .course-header {
     overflow: hidden;
     min-height: 300px;
-    background: #f9f5f7;
+    background: #f5f8f9;
     background-repeat: no-repeat;
     background-position-x: center;
     background-position-y: center;
@@ -11015,7 +11015,7 @@ h4 span.book-title {
 }
 
 .course-title.bg__3 {
-    background: #FFFFE0;
+    background: #fffded;
 }
 
 .course-block .course-info {
@@ -11024,8 +11024,8 @@ h4 span.book-title {
     font-size: 0.9em;
     line-height: 1.2em;
     margin-left: 2.8em;
-    background: rgba(216, 235, 241, 0.8);
-    color: #166482;
+    background: rgba(255,225,168,0.8);
+    color: #1e1e1e;
     min-height: 300px;
 }
 
@@ -11039,7 +11039,7 @@ h4 span.book-title {
     position: absolute;
     bottom: 2.8em;
     font-size: 0.9em;
-    color: #2a5b70;
+    color: #1e1e1e;
     padding-right: 2.8em;
     padding-left: 2.2em;
 }
@@ -11049,7 +11049,7 @@ h4 span.book-title {
     content: "\e9e6";
     position: absolute;
     font-size: 2em;
-    color: #7ba8b9;
+    color: #232323;
     top: 8px;
     left: -5px;
 }
