--- a/css/theme.css
+++ b/css/theme.css
@@ -10998,7 +10998,7 @@ h4 span.book-title {
 }
 
 .course-header.bg__mult {
-    background-image: url(../img/bg-multiplicationtable.jpg);
+    background-image: url(../img/bg-bookshelf.jpg);
 }
 
 
