--- a/css/theme.css
+++ b/css/theme.css
@@ -10973,7 +10973,7 @@ h4 span.book-title {
 }
 
 .course-header.bg__sequencial {
-    background-image: url(../img/bg-nautilus.jpg);
+    background-image: url(../img/bg-origami.jpg);
 }
 
 .course-header.bg__sequencenew {
