--- a/css/theme.css
+++ b/css/theme.css
@@ -10961,7 +10961,7 @@ h4 span.book-title {
 .course-block .course-header {
     overflow: hidden;
     min-height: 300px;
-    background: #cccccc;
+    background: #f5f8f9;
     background-repeat: no-repeat;
     background-position-x: center;
     background-position-y: center;
@@ -11029,7 +11029,7 @@ h4 span.book-title {
     font-size: 0.9em;
     line-height: 1.2em;
     margin-left: 2.8em;
-    background: rgba(226,176,205,0.8);
+    background: rgba(225,225,225,0.5);
     color: #1e1e1e;
     min-height: 300px;
 }
