--- a/css/theme.css
+++ b/css/theme.css
@@ -10989,7 +10989,7 @@ h4 span.book-title {
 }
 
 .course-header.bg__proofs {
-    background-image: url(../img/bg-crumpledpaper.jpg);
+    background-image: url(../img/bg-crumpledpaper-old.jpg);
 }
 
 
