--- a/css/theme.css
+++ b/css/theme.css
@@ -10235,7 +10235,7 @@ input[type="tel"]:focus {
 }
 
 .bg--warning {
-    background: #f7f7f7;
+    background: #faf0fb;
 }
 
 .bg--red p,
@@ -11024,7 +11024,7 @@ h4 span.book-title {
 }
 
 .course-title.bg__5 {
-    background: rgba(200,230,255,0.72);
+    background: rgba(200,230,255,0.35);
 }
 
 .course-block .course-info {
@@ -11033,7 +11033,7 @@ h4 span.book-title {
     font-size: 0.9em;
     line-height: 1.2em;
     margin-left: 2.8em;
-    background: rgba(200,230,255,0.72);
+    background: rgba(200,230,255,0.8);
     color: #1e1e1e;
     min-height: 300px;
 }
